CHAPT2_ws/log/build_2025-03-06_22-25-51/demo_py_pkg/stderr.log
  File "/home/wxx/study_ros2/CHAPT2_ws/install/demo_py_pkg/lib/python3.8/site-packages/demo_py_pkg/person_node.py", line 5
    
    ^
SyntaxError: unexpected EOF while parsing

